[package]
name = "rq"
version = "0.1.0"
authors = ["Matt Hooper <mattt.hoooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
nom = "7.0.0"

[lib]
name = "rq"
path = "src/lib.rs"

[[bin]]
name = "rq"
path = "src/main.rs"